# BahaSignDaily

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
sign/: ani.py  guild.py  site.py
